Add structure for localization and literally lots of changes??

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["discordjs", "furude", "rika"]
+  "cSpell.words": ["discordjs", "furude", "rika"],
+  "cSpell.language": "en,pt,pt-BR"
 }
