--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "consola": "^2.15.3",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
+    "expr-eval": "^2.0.2",
     "i18next": "^21.6.3"
   },
   "devDependencies": {
