Adds a coinflip command

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
-  "cSpell.words": ["discordjs", "furude", "rika"],
+  "cSpell.words": [
+    "coinflip",
+    "discordjs",
+    "furude",
+    "rika"
+  ],
   "cSpell.language": "en,pt,pt-BR"
 }
