--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "description": "",
   "dependencies": {
     "@discordjs/builders": "^0.9.0",
+    "@discordjs/rest": "^0.2.0-canary.0",
     "consola": "^2.15.3",
+    "discord-api-types": "^0.25.2",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "expr-eval": "^2.0.2",
