Adds mongodb with typeorm and decorators for commands like (OwnerOnly)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
     "coinflip",
     "discordjs",
     "furude",
-    "rika"
+    "rika",
+    "typeorm",
+    "zjpv"
   ],
   "cSpell.language": "en,pt,pt-BR"
 }
