--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "expr-eval": "^2.0.2",
-    "i18next": "^21.6.3"
+    "i18next": "^21.6.3",
+    "mongodb": "^3.6.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.41"
   },
   "devDependencies": {
+    "@types/node": "^17.0.2",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   },
