--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "trailingComma": "es5",
     "tabWidth": 2,
     "semi": true,
-    "singleQuote": true
+    "singleQuote": true,
+    "arrowParens": "always",
+    "bracketSpacing": true
   }
 }
