Adds dbGuild entities, lets customize language per guild and some structure changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
   "cSpell.words": [
+    "bróder",
     "coinflip",
     "discordjs",
     "furude",
     "Parens",
     "rika",
+    "snowflakeable",
     "typeorm",
     "zjpv"
   ],
