Adds hyper values and separates daily globally and locally

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
   "cSpell.words": [
+    "brazilian",
     "bróder",
     "coinflip",
     "discordjs",
     "furude",
+    "hyperization",
+    "hyperize",
+    "hypervalues",
     "Parens",
     "rika",
     "snowflakeable",
