--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.9.0",
     "@discordjs/rest": "^0.2.0-canary.0",
+    "chance": "^1.1.8",
     "consola": "^2.15.3",
     "date-fns": "^2.27.0",
     "discord-api-types": "^0.25.2",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.2",
+    "@types/chance": "^1.1.3",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   },
