--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,15 @@
     "Bindables",
     "brazilian",
     "bróder",
+    "checkmark",
     "coinflip",
     "discordjs",
     "furude",
     "hyperization",
     "hyperize",
     "hypervalues",
+    "leaderboard",
+    "Leaderboard",
     "Parens",
     "rika",
     "snowflakeable",
