--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@stdlib/stdlib": "^0.0.96",
     "axios": "^0.24.0",
     "chance": "^1.1.8",
+    "cheerio": "^1.0.0-rc.10",
     "consola": "^2.15.3",
     "date-fns": "^2.27.0",
     "discord-api-types": "^0.26.1",
