osu! recent scores base

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,16 +8,24 @@
     "bróder",
     "checkmark",
     "coinflip",
+    "countgeki",
+    "countkatu",
+    "countmiss",
+    "Customizer",
     "dgsrz",
     "discordjs",
     "furude",
+    "geki",
     "hyperization",
     "hyperize",
     "hypervalues",
+    "katu",
     "leaderboard",
     "Leaderboard",
+    "maxcombo",
     "Parens",
     "playcount",
+    "Recents",
     "rika",
     "snowflakeable",
     "taiko",
