Simple recent plays caching

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,14 @@
   "cSpell.words": [
     "bancho",
     "Bancho",
+    "beatmaps",
+    "Beatmaps",
+    "beatmapset",
     "bindables",
     "Bindables",
     "brazilian",
     "bróder",
+    "BRUH",
     "checkmark",
     "coinflip",
     "countgeki",
@@ -13,23 +17,35 @@
     "countmiss",
     "Customizer",
     "dgsrz",
+    "difficultyrating",
     "discordjs",
+    "favourite",
+    "favourited",
     "furude",
     "geki",
     "hyperization",
     "hyperize",
     "hypervalues",
+    "IAPI",
+    "italian",
+    "japanese",
     "katu",
     "leaderboard",
     "Leaderboard",
     "maxcombo",
     "Parens",
+    "passcount",
     "playcount",
     "Recents",
+    "reranked",
     "rika",
+    "russian",
     "snowflakeable",
+    "spanish",
+    "swedish",
     "taiko",
     "typeorm",
+    "unranked",
     "zjpv"
   ],
   "cSpell.language": "en,pt,pt-BR"
