Brand new translation system.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,11 +7,13 @@
     "beatmapset",
     "bindables",
     "Bindables",
+    "Blacklistei",
     "brazilian",
     "bróder",
     "BRUH",
     "checkmark",
     "coinflip",
+    "cooldown",
     "countgeki",
     "countkatu",
     "countmiss",
@@ -35,6 +37,7 @@
     "maxcombo",
     "Parens",
     "passcount",
+    "pickone",
     "playcount",
     "Recents",
     "reranked",
@@ -47,6 +50,7 @@
     "taiko",
     "typeorm",
     "unranked",
+    "Whitelistei",
     "zjpv"
   ],
   "cSpell.language": "en,pt,pt-BR"
