--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "npm run build && npm run start",
     "build": "tsc --build tsconfig.json",
-    "start": "node --trace-warnings --experimental-specifier-resolution=node .",
+    "start": "node --trace-warnings .",
     "format": "npx prettier -w src",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint_fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
