--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "dotenv": "^10.0.0",
     "expr-eval": "^2.0.2",
     "i18next": "^21.6.3",
+    "keyv": "^4.0.5",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "typeorm-cache": "^1.1.3"
   },
   "devDependencies": {
     "@types/chance": "^1.1.3",
