--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "dotenv": "^10.0.0",
     "expr-eval": "^2.0.2",
     "i18next": "^21.6.3",
-    "keyv": "^4.0.5",
+    "node-cache": "^5.1.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.41",
-    "typeorm-cache": "^1.1.3"
+    "typeorm-in-memory-cache": "^1.0.2"
   },
   "devDependencies": {
     "@types/chance": "^1.1.3",
